# unify

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Unify.sln  premake5.lua
.cache/clangd/index/: engine.cpp.BAD8522311962110.idx  engine.h.A85F0EDF872BEA9F.idx  main.cpp.3FB587A60A0E9C58.idx  main.cpp.BC439C8499C3CD43.idx  window.cpp.B89C2437272ECCBC.idx  window.h.D5079C3E2F21C25A.idx
Editor/: Editor.vcxproj  Editor.vcxproj.filters
Editor/src/: Editor.cpp
Unify/: Unify.vcxproj  Unify.vcxproj.filters
Unify/src/: Unify.h
Unify/src/Unify/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
sources/Unify/include/unify/: engine.h  log.h
sources/Unify/include/unify/core/: window.h
sources/Unify/include/unify/graphics/: helpers.h  mesh.h  render_command.h  shader.h
sources/Unify/include/unify/input/: mouse.h
sources/Unify/include/unify/managers/: log_manager.h  render_manager.h
sources/Unify/src/: engine.cpp
sources/Unify/src/core/: window.cpp
sources/Unify/src/graphics/: helpers.cpp  mesh.cpp  render_command.cpp  shader.cpp
sources/Unify/src/input/: mouse.cpp
sources/Unify/src/managers/: log_manager.cpp  render_manager.cpp
sources/UnifyEditor/src/: main.cpp
